# Perseus

./: README.md  SECURITY.md  backend_full.rs  ci-cd-pipeline.yml  database_migrations.sql  docker-compose.yml  env.example  frontend_full.jsx  helm-chart.yaml
backend/: Cargo.toml  Dockerfile  README.md
backend/migrations/: 001_init.sql
backend/src/: auth.rs  db.rs  main.rs  routes.rs  scheduler.rs
frontend/: Dockerfile  index.html  package.json
frontend/src/: Admin.jsx  App.jsx  Dashboard.jsx  main.jsx
frontend/src/pages/: Dashboard.jsx
