[package]
name = "perseus-backend"
version = "4.3.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "8"
argon2 = "0.4"
tracing = "0.1"
tokio-tungstenite = "0.18"
